// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreen component renders normally 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.section
    theme={
        Object {
            "background": "#243949",
            "backgroundImage": "linear-gradient(to top, #243949 70%, #517fa4 100%)",
            "borderColor": "#FFF",
            "buttonColor": "DarkOrange",
            "buttonFontColor": "#FFF",
            "contestedMatchBackgroundColor": "red",
            "deleteBackgroundColor": "red",
            "fontColor": "#FFF",
            "fontSize": "16px",
            "headerBackgroundColor": "rgba(0, 0, 0, 0.7)",
            "headerFontColor": "#FFF",
            "matchBackgroundColor": "#243949",
            "movementDown": "#da1418",
            "movementUp": "#66b75b",
            "smallFont": "12px",
            "statusOfflineColor": "orange",
            "statusOnlineColor": "green",
            "statusUnknownColor": "lightgrey",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-htoDjs jIzKkg",
    },
    "ref": null,
    "rendered": null,
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-htoDjs jIzKkg",
      },
      "ref": null,
      "rendered": null,
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header component renders normally 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.header
    theme={
        Object {
            "background": "#243949",
            "backgroundImage": "linear-gradient(to top, #243949 70%, #517fa4 100%)",
            "borderColor": "#FFF",
            "buttonColor": "DarkOrange",
            "buttonFontColor": "#FFF",
            "contestedMatchBackgroundColor": "red",
            "deleteBackgroundColor": "red",
            "fontColor": "#FFF",
            "fontSize": "16px",
            "headerBackgroundColor": "rgba(0, 0, 0, 0.7)",
            "headerFontColor": "#FFF",
            "matchBackgroundColor": "#243949",
            "movementDown": "#da1418",
            "movementUp": "#66b75b",
            "smallFont": "12px",
            "statusOfflineColor": "orange",
            "statusOnlineColor": "green",
            "statusUnknownColor": "lightgrey",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-EHOje gOMkQv",
    },
    "ref": null,
    "rendered": null,
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-EHOje gOMkQv",
      },
      "ref": null,
      "rendered": null,
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Wrapper component renders normally 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Styled(styled.div)
    theme={
        Object {
            "background": "#243949",
            "backgroundImage": "linear-gradient(to top, #243949 70%, #517fa4 100%)",
            "borderColor": "#FFF",
            "buttonColor": "DarkOrange",
            "buttonFontColor": "#FFF",
            "contestedMatchBackgroundColor": "red",
            "deleteBackgroundColor": "red",
            "fontColor": "#FFF",
            "fontSize": "16px",
            "headerBackgroundColor": "rgba(0, 0, 0, 0.7)",
            "headerFontColor": "#FFF",
            "matchBackgroundColor": "#243949",
            "movementDown": "#da1418",
            "movementUp": "#66b75b",
            "smallFont": "12px",
            "statusOfflineColor": "orange",
            "statusOnlineColor": "green",
            "statusUnknownColor": "lightgrey",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "className": "sc-ifAKCX ilxlVI",
      "innerRef": undefined,
      "theme": Object {
        "background": "#243949",
        "backgroundImage": "linear-gradient(to top, #243949 70%, #517fa4 100%)",
        "borderColor": "#FFF",
        "buttonColor": "DarkOrange",
        "buttonFontColor": "#FFF",
        "contestedMatchBackgroundColor": "red",
        "deleteBackgroundColor": "red",
        "fontColor": "#FFF",
        "fontSize": "16px",
        "headerBackgroundColor": "rgba(0, 0, 0, 0.7)",
        "headerFontColor": "#FFF",
        "matchBackgroundColor": "#243949",
        "movementDown": "#da1418",
        "movementUp": "#66b75b",
        "smallFont": "12px",
        "statusOfflineColor": "orange",
        "statusOnlineColor": "green",
        "statusUnknownColor": "lightgrey",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "className": "sc-ifAKCX ilxlVI",
        "innerRef": undefined,
        "theme": Object {
          "background": "#243949",
          "backgroundImage": "linear-gradient(to top, #243949 70%, #517fa4 100%)",
          "borderColor": "#FFF",
          "buttonColor": "DarkOrange",
          "buttonFontColor": "#FFF",
          "contestedMatchBackgroundColor": "red",
          "deleteBackgroundColor": "red",
          "fontColor": "#FFF",
          "fontSize": "16px",
          "headerBackgroundColor": "rgba(0, 0, 0, 0.7)",
          "headerFontColor": "#FFF",
          "matchBackgroundColor": "#243949",
          "movementDown": "#da1418",
          "movementUp": "#66b75b",
          "smallFont": "12px",
          "statusOfflineColor": "orange",
          "statusOnlineColor": "green",
          "statusUnknownColor": "lightgrey",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
